--- a/interpreter/Uwu_Plus_Plus_Interpreter.vcxproj
+++ b/interpreter/Uwu_Plus_Plus_Interpreter.vcxproj
@@ -84,6 +84,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+	  <ClInclude Include="result.h" />
+	  <ClInclude Include="string_iterator.h" />
 	  <ClInclude Include="tokenizer.h" />
   </ItemGroup>
   <ItemGroup>
